k8s/external-dns/ingress-http.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: web-ingress 
  namespace: app 
  annotations:
    external-dns.alpha.kubernetes.io/hostname: eapp2.mohammadahmed1774.work

spec:
  ingressClassName: nginx 
  rules:
  - host: mohammadahmed1774.work 
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: web 
            port:
              number: 80
